# yas-nix

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  EULA.md  Makefile  README.md
assets/: featured.json
qml/: Main.qml
src/: main.cpp  nixadapter.cpp  nixadapter.h
tests/: CMakeLists.txt  tst_nixadapter.cpp
